Use default GC logging options when none are provided.